# NeuronNetwork

./: .gitignore  CMakeLists.txt  Доклад.docx
src/: MNIST.cpp  MNIST.h  Matrix.cpp  Matrix.h  MultiPerceptron.cpp  MultiPerceptron.h  Neuron.cpp  Neuron.h  NeuronNet.cpp  NeuronNetwork.cpp  NeuronNetwork.h  Perceptron.cpp  Perceptron.h  PerceptronLayer.cpp  PerceptronLayer.h  main.cpp
